prevent livesearch result text from bleeding out (LP #785450)

--- a/karl/views/static/bottlecap-wire/livesearch.css
+++ b/karl/views/static/bottlecap-wire/livesearch.css
@@ -170,6 +170,7 @@
 
 .bc-livesearch-autocomplete-results .ui-menu-item a {
     border: 1px solid #ffffff;
+    overflow: hidden;
 }
 
 .bc-livesearch-autocomplete-results .ui-menu-item a:hover,
